--- a/index.html
+++ b/index.html
@@ -85,48 +85,42 @@
 			<section class="gifts">
 				<h2 class="gifts__title">Что вы получите?</h2>
 				<div class="gifts__wrap">
-					<div class="gifts__wrapper">
-						<div class="gifts__wrapper-inner">
-							<h3 class="gifts__subtitle unique-book">
-								Уникальную книгу, в которую я вместил все свои 6 лет опыта торговли.
-							</h3>
-						</div>
-						<div class="gifts__wrapper-inner">
-							<h3 class="gifts__subtitle">
-								Бот-инсайдер на год.
-							</h3>
-							<p class="gifts__subdescription text-gift">
-								Подарок каждому ученику. Он поможет вам в будущей торговле.
-							</p>
-						</div>
+					<div class="unique-book">
+						<h3 class="unique-book__subtitle unique-book_change">
+							Уникальную книгу, в которую я вместил все свои 6 лет опыта торговли.
+						</h3>
 					</div>
-					<div class="gifts__wrapper gifts__wrapper_big"></div>
-					<div class="gifts__wrapper">
-						<div class="gifts__wrapper-inner">
-							<h3 class="gifts__subtitle tasks">
-								Задачник, который даст вам полное усвоение пройденного материала.
-							</h3>
-						</div>
-						<div class="gifts__wrapper-inner">
-							<h3 class="gifts__subtitle text-lessons">
-								4-ре глобальных урока по инвестициям.
-							</h3>
-							<p class="gifts__subdescription paragraph-lessons">
-								Эти уроки помогут вам до конца во всем разобраться, чтобы не оставалось никаких вопросов.
-							</p>
-						</div>
+					<div class="bot-block">
+						<h3 class="bot-block__subtitle">
+							Бот-инсайдер на год.
+						</h3>
+						<p class="bot-block__subdescription bot-block_change">
+							Подарок каждому ученику. Он поможет вам в будущей торговле.
+						</p>
 					</div>
-					<div class="gifts__wrapper gifts__wrapper_width">
-						<div class="gifts__inner-bottom">
-							<h3 class="gifts__subtitle-bottom">
-								5-ть портфелей : долгосрок, среднесрок и три краткосрочных, которые будут обновляться раз в месяц.
-							</h3>
-							<p class="gifts__subdescription-bottom">
-								Эти портфели помогут вам обрести грамотно выстроенную систему инвестирования на различные сроки. Такого
-								вы
-								не найдете больше нигде.
-							</p>
-						</div>
+					<div class="computer"></div>
+					<div class="material">
+						<h3 class="material__subtitle material__subtitle_change">
+							Задачник, который даст вам полное усвоение пройденного материала.
+						</h3>
+					</div>
+					<div class="investments">
+						<h3 class="investments__subtitle investments__subtitle_change">
+							4-ре глобальных урока по инвестициям.
+						</h3>
+						<p class="investments__subdescription investments__subdescription-change">
+							Эти уроки помогут вам до конца во всем разобраться, чтобы не оставалось никаких вопросов.
+						</p>
+					</div>
+					<div class="portfolio">
+						<h3 class="portfolio__subtitle">
+							5-ть портфелей : долгосрок, среднесрок и три краткосрочных, которые будут обновляться раз в месяц.
+						</h3>
+						<p class="portfolio__subdescription">
+							Эти портфели помогут вам обрести грамотно выстроенную систему инвестирования на различные сроки. Такого
+							вы
+							не найдете больше нигде.
+						</p>
 					</div>
 				</div>
 			</section>
