--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 					<div class="header__wrap-image">
 						<img class="header__image" src="image/circle.jpg" alt="Logo">
 					</div>
+					<div class="header__wrap-image">
+						<img class="header__image" src="image/circle.jpg" alt="Logo">
+					</div>
 					<a class="header__link" href="#">StartTheHistory</a>
 				</div>
 				<button class="header__button-top"></button>
