--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 				<span class="header__accent">То, что</span><span class="header__text">изменит ваше представление о мире
 					инвестиций</span>
 			</h1>
+			<h1 class="header__title">
+				<span class="header__accent">То, что</span><span class="header__text">изменит ваше представление о мире
+					инвестиций</span>
+			</h1>
 			<div class="header__wrapper-bottom">
 				<p class="header__advantage">
 					То, что даст вам преимущество перед остальными инвесторами.
